Increase gap between columns to ensure that left rounded borders of highlighted boxes in the right column are not overlaid by the left column

--- a/resource/support/decker.scss
+++ b/resource/support/decker.scss
@@ -299,7 +299,7 @@ body {
                     /////////////////////////////////////////////
                     &.css-columns {
                         column-count: 2;
-                        column-gap: 1em;
+                        column-gap: 1.5em;
                         column-rule-style: none;
                     }
 
